# BatteryModelling

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tasks.py
Jad/: Batterie_fit_noSOH.m  Battery_Simulink_Model.m  Compute_Mean.m  First_Scenario.m  Fit.py  Power_Control.m  Scenario.m  finalOutput.txt
Week3Nick/: temp.txt
aging/: degradationModel.py  evaluateCostFunctions.py  examineCDF.py  optimisePower.py
aging/GrannysHouse/: Compute_Mean.m  First_Scenario.m  Power_Control.m  Scenario.m
aging/degradationModelFnctionGeneration/: currentScalingFunction.py  generateCurrentAgnosticDegradation.py
cleanData/0c/cleanData0C/: run10_0C.csv  run11_0C.csv  run12_0C.csv  run13_0C.csv  run14_0C.csv  run15_0C.csv  run16_0C.csv  run17_0C.csv  run18_0C.csv  run19_0C.csv  run1_0C.csv  run20_0C.csv  run21_0C.csv  run22_0C.csv  run23_0C.csv  run24_0C.csv  run25_0C.csv  run26_0C.csv  run27_0C.csv  run28_0C.csv  run29_0C.csv  run2_0C.csv  run30_0C.csv  run31_0C.csv  run32_0C.csv  run33_0C.csv  run34_0C.csv  run35_0C.csv  run36_0C.csv  run37_0C.csv  (+23 more)
data/dataProcessing/: Readme file - desc of tests performed.txt
dataProcessing/: Readme file - desc of tests performed.txt  zProcess.py
interface/: batmap.py  graphs.py  mainwindow.py  person.py
nickWeek3/: calculateParameters.m  exampleFitting.m  finalOutput.txt  generateECMSurface.m  generateOCV.m  getMAPE.m  getSSE.m  getTempFolder.m  getTempFromFilename.m  getVoltageCurve.m  getVoltageCurveConstOCV.m  measuredVoltage.csv  parameterCurveFinding.py  times.csv
parameters/: calculateParameters.m  exampleFitting.m  finalOutput.txt  finalOutputWithOCV.txt  getCapacity.m  getMAPE.m  getTempFolder.m  getTempFromFilename.m  getVoltageCurve.m  initialModel.m  measuredCurrent.csv  parameterCurveFinding.py  predictedVoltage.csv
playground/: Aoibheann_current_input_code.m  Aoibheann_power_input.m  aoibheann.m  fit_clean_data.py  headless.py  pybamm_trial.py
playground/zSOHModel/: datasheetSOH.py  degradationModel.py  evaluateCostFunctions.py  examineCDF.py  optimisePower.py  socDegradeModel.py  timeTilFail.py
report/: .gitignore  customisations.tex  report.tex  sources.bib
report/figures/: battery-model-overview.tex  ecm-model.tex  grannys-house.tex  graz-to-munich.tex
simulator/: batgraph.py  batmap.py  batmobile.py  battery.py  optimiser.py  simulation.py
zellaWeek1/: OCV.m  generateData.m  generateOCV.m  getCapacity.m  initialModel.m
zellaWeek1/Panasonic 18650PF Data/: Plot_results.m
(+466 files in other folders)
