[tool.poetry]
name = "batterymodelling"
version = "0.1.0"
description = "MMSC Case Study in Modelling :)"
authors = ["Jad", "Nicholas", "Aoibheann", "Zella", "Peter"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pyside6 = "^6.4.2"
networkx = "^3.0"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
mat4py = "^0.5.0"
osmnx = "^1.3.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [".git", "**/__pycache__"]
