[tool.poetry]
name = "batterymodelling"
version = "0.1.0"
description = "MMSC Case Study in Modelling :)"
authors = ["Jad", "Nicholas", "Aoibheann", "Zella", "Peter"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, <3.14"
pyside6 = "^6.8.1.1"
networkx = "^3.4.2"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
mat4py = "^0.5.0"
osmnx = "^2.0.1"
scipy = "^1.15.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = [".git", "**/__pycache__"]
lint.select = ["ALL"]
